# thesis

./: .buildinfo  .editorconfig  .gitignore  CNAME  _config.yml  _toc.yml  area_references.bib  common.py  count.sh  genindex.html  intro.html  notebooks.html  objects.inv  pyproject.toml  references.bib  requirements.txt  scenario_1.py  scenario_2.py  search.html  searchindex.js
.github/workflows/: publish.yml
_build/.doctrees/: content.doctree  environment.pickle  intro.doctree  markdown.doctree  notebooks.doctree
_build/html/: .buildinfo  content.html  genindex.html  markdown.html  objects.inv  search.html  searchindex.js
_build/jupyter_execute/: notebooks.ipynb
_sources/content/: content.md  index.ipynb  index.md
content/: bib.html  content.html  content.md  index.html  index.ipynb  index.md  thesis_wc.csv
content/00_annual_review/: activities_to_date.html  activities_to_date.md  area.html  area.md  lit_review.html  lit_review.md  previous_years.html  previous_years.md  question.html  question.md  statement.html  statement.md  structure.html  structure.md  summary.html  summary.md  this_year.html  this_year.md
content/00_introduction/: intro.html  intro.md
content/00_thesis_pages/: appendix.html  conclusion.html  content.html  content.md  front_page.html  front_page.md  preliminaries.html  publications.html
content/01_fair_representations/: intro.html  intro.md
content/01_intro/: definitions.html  definitions.md  intro.html  intro.md
content/01_introduction/: adversarial_methods.html  background.html  challenges.html  intro.html  (+6 more)
draft/: index.md
(+139 files in other folders)
