[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Oliver Thomas <1835492+olliethomas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
EthicML = "*"
jupyter-book = "*"
matplotlib = "*"
numpy = "*"
scikit-learn = "*"
sphinx-tabs = "*"
plotly = "*"
pyppeteer = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
