[tool.poetry]
name = "thesis"
version = "0.1.0"
description = "A web version of my thesis."
authors = ["Oliver Thomas <1835492+olliethomas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter-book = "^0.12.1"
matplotlib = "^3.5.1"
numpy = "^1.22.1"
plotly = "^5.5.0"
pyppeteer = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
